hphp/hack/test/typecheck/xhp_attr_6.php.like_types.exp
File "xhp_attr_6.php", line 4, characters 13-15:
Invalid return type (Typing[4110])
File "xhp_attr_6.php", line 6, characters 28-30:
Expected int
File "xhp_attr_6.php", line 4, characters 13-15:
But got null
